crates/schema/tests/compile_fail/derive_enum_select_secret.stderr
error: `#[field(enum_select)]` cannot be combined with `#[field(secret)]`
  --> tests/compile_fail/derive_enum_select_secret.rs:12:5
   |
12 |     c: Color,
   |     ^

error[E0599]: no associated function or constant named `schema` found for struct `Bad` in the current scope
  --> tests/compile_fail/derive_enum_select_secret.rs:16:18
   |
10 | struct Bad {
   | ---------- associated function or constant `schema` not found for this struct
...
16 |     let _ = Bad::schema();
   |                  ^^^^^^ associated function or constant not found in `Bad`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `schema`, perhaps you need to implement it:
           candidate #1: `HasSchema`
